--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,11 @@
 spring.application.name=user-authentication
-# H2 DB
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.url=jdbc:mysql://localhost:3306/authentication_db
+spring.datasource.username=root
+spring.datasource.password=dp090704
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto=update
-#
-## H2 Console
-#spring.h2.console.enabled=true
-#
-## JWT secret key (example)
-#jwt.secret=MySuperSecretJWTKeyChangeThis
-#jwt.expiration=3600000
+#spring.jpa.show-sql=true
